2005-10-23 chrisaga

	* bug 184 fixed: .png button left aligned in IE

2005-10-23 Pierrick LE GALL

	* bug 182 fixed: newly created user is not displayed in the user
	list.

2005-10-23 Pierrick LE GALL

	* bug fixed: during file tree synchronization, warning on finding
	the next rank of category which has no sub-categories yet.
	
2005-10-23 chrisaga

	* bug fixed: cat-list.tpl validate now

	* improvement: removed some unnecessary css rules from old tests in 
	FROM  design in file default-layout.css

2005-10-23 Pierrick LE GALL

	* bug 181 fixed: "Parameters not created in phpwebgallery_config
	during upgrade". gallery_title and gallery_description had not
	been added to config table. (use|show)_(exif|iptc) and
	authorize_remembering have also been removed...

2005-10-22 chrisaga

	* bug 177 fixed: icon tools wrong position in Safari and Konqueror
	Needed a little trick to fix it. Put the trick in a fix-khtml.css
	Loading in header.tpl and protected from IE, Geko and Opera,
	just in case (couldn't foud a safari css-only filter wich validate)
	
	* bug fixed: issue in the FORM in remote_site.tpl which prevented
	HTML validation (still something to do with the TABLE).

2005-10-22 Pierrick LE GALL

	* bug fixed: link on a single day in
	Administration>General>History was missing

2005-10-22 Pierrick LE GALL

	* bug 173 fixed: due to phpBB user identifiers management, the
	method to find the next user identifier has changer to MAX+1.

	* improvement: information message when new user added

	* bug fixed: language item "Username" used instead of "login".
	
2005-10-20 chrisaga

	* bug 176 fixed: need a javascript to handle transparent PNG
	background in IE (tribute to Bob Osola
	http://homepage.ntlworld.com/bobosola/index.htm)

	* display: fixed another IE childselector bug in Categories
	Management admin page and improved display of this page in all
	browsers too.

2005-10-18 Pierrick LE GALL

	* bug 174 fixed: use_exif_mapping configuration parameter was not